cedar-lean/UnitTest/parser_tests/negative/invalid_operator_mod.cedar
permit(principal, action, resource) when { 10 % 3 == 1 };
